kubernetes/apps/media/sabnzbd/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sabnzbd
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    hajimari.io/enable: "true"
    hajimari.io/icon: mdi:download
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    traefik.ingress.kubernetes.io/router.middlewares: networking-traefik-middleware-authentik@kubernetescrd
spec:
  ingressClassName: "traefik"
  tls:
    - hosts:
        - "sabnzbd.${SECRET_DOMAIN}"
      secretName: "filebrowser-tls"
  rules:
    - host: "sabnzbd.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sabnzbd
                port:
                  number: 80
